--- a/index.html
+++ b/index.html
@@ -7,8 +7,18 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    <header>
-
+    <header class="banner">
+<nav class="navbar display-flex">
+    <h3 class="brand">G3 Architects</h3>
+    <ul class="anchor display-flex">
+       
+            <li class="nav-item"><a href="" class="nav-link">Home</a></li>
+            <li class="nav-item"><a href="" class="nav-link">About</a></li>
+            <li class="nav-item"><a href="" class="nav-link">Contact Us</a></li>
+            <li class="nav-item"><a href="" class="nav-link">Login</a></li>
+        
+    </ul>
+</nav>
     </header>
     <main>
 
