--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    <header class="banner">
+    <header>
 <nav class="navbar display-flex">
     <h3 class="brand">G3 Architects</h3>
     <ul class="anchor display-flex">
@@ -19,6 +19,16 @@
         
     </ul>
 </nav>
+<div  class="banner">
+<div class="banner-content">
+    <h3 class="banner-title">Brand New <br>
+Group of Architects 
+</h3>
+<p class="banner-info">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+<button class="primary-btn">Explore More</button>
+</div>
+<img src="images/banner.png" alt="" class="banner-img">
+</div>
     </header>
     <main>
 
