--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
 <nav class="navbar display-flex">
-    <h3 class="brand">G3 Architects</h3>
+    <h3 class="brand center-align">G3 Architects</h3>
     <ul class="anchor display-flex">
        
             <li class="nav-item"><a href="" class="nav-link">Home</a></li>
@@ -31,7 +31,20 @@ Group of Architects
 </div>
     </header>
     <main>
+<section class="teams">
+    <div class="team-img-container">
+<img src="images/team1.png" alt="">
+<img src="images/team2.png" alt="">
+<img src="images/team3.png" alt="">
+<img src="images/team4.png" alt="">
+    </div>
+    <div class="features">
+        <h3>Quick list <span class="brand">of Our</span> Features</h3>
+        <p class="banner-info">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+        <button class="primary-btn">Explore More</button>
 
+    </div>
+</section>
     </main>
     <footer>
         
