--- a/index.html
+++ b/index.html
@@ -33,17 +33,33 @@ Group of Architects
     <main>
 <section class="teams">
     <div class="team-img-container">
-<img src="images/team1.png" alt="">
+<img src="images/team1.png" alt="two architect discussing about design">
 <img src="images/team2.png" alt="">
 <img src="images/team3.png" alt="">
 <img src="images/team4.png" alt="">
     </div>
     <div class="features">
-        <h3>Quick list <span class="brand">of Our</span> Features</h3>
+        <h3 class="feature-title"><span id="quick-list">Quick list</span> <span class="brand">of Our</span><span class="text-primary"> Features</span></h3>
         <p class="banner-info">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
         <button class="primary-btn">Explore More</button>
 
     </div>
+</section>
+<section class="ourFeatures">
+    <h3 class="feature-title">
+        Features you will love & enjoy
+    </h3>
+    <p class="banner-info">
+        There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even
+    </p>
+</section>
+<section class="some-facts">
+<h3 class="feature-title">
+    Some Facts
+</h3>
+<p class="banner-info">
+   There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.
+</p>
 </section>
     </main>
     <footer>
