--- a/index.html
+++ b/index.html
@@ -60,6 +60,36 @@ Group of Architects
 <p class="banner-info">
    There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.
 </p>
+<div class="fact-container">
+    <div class="fact">
+        <div>
+            <img src="images/icons/ribon.png" alt="" class="img-icon">
+        <h4 class="fact-number">239</h4>
+        <h5 class="fact-name">Award Wining</h5>
+        </div>
+    </div>
+    <div class="fact">
+       <div>
+         <img src="images/icons/projects.png" alt="" class="img-icon">
+        <h4 class="fact-number">1458</h4>
+        <h5 class="fact-name">Project Finished</h5>
+       </div>
+    </div>
+    <div class="fact">
+       <div>
+         <img src="images/icons/customers.png" alt="" class="img-icon">
+        <h4 class="fact-number">590</h4>
+        <h5 class="fact-name">Clients Worked</h5>
+       </div>
+    </div>
+    <div class="fact">
+        <div>
+            <img src="images/icons/email.png" alt="" class="img-icon">
+        <h4 class="fact-number">22578</h4>
+        <h5 class="fact-name">Email Send</h5>
+        </div>
+    </div>
+</div>
 </section>
     </main>
     <footer>
