--- a/index.html
+++ b/index.html
@@ -46,18 +46,47 @@ Group of Architects
     </div>
 </section>
 <section class="ourFeatures">
-    <h3 class="feature-title">
-        Features you will love & enjoy
+ <div>
+       <h3 id="feature-section-title" class="feature-title">
+        Features you will<br> love & enjoy
     </h3>
     <p class="banner-info">
         There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even
     </p>
+    <!-- feature card container -->
+     <div class="feature-card">
+        <h4 class="feature-title">Dexktop & Mobile Version</h4>
+        <p class="banner-info">
+            There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........
+        </p>
+     </div>
+     <div class="feature-card">
+        <h4 class="feature-title">Dexktop & Mobile Version</h4>
+        <p class="banner-info">
+            There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........
+        </p>
+     </div>
+     <div class="feature-card">
+        <h4 class="feature-title">Dexktop & Mobile Version</h4>
+        <p class="banner-info">
+            There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........
+        </p>
+     </div>
+     <div class="feature-card">
+        <h4 class="feature-title">Dexktop & Mobile Version</h4>
+        <p class="banner-info">
+            There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........
+        </p>
+     </div>
+ </div>
+ <div><img src="images/architect.png" alt="">
+<button class="primary-btn" id="experience-badge"><span id="experience-year">10+Years</span><br><span>Experience</span></button></div>
 </section>
 <section class="some-facts">
 <h3 class="feature-title">
     Some Facts
 </h3>
-<p class="banner-info">
+<p class="banner-info fact-description">
    There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.
 </p>
 <div class="fact-container">
