--- a/index.html
+++ b/index.html
@@ -80,7 +80,11 @@ Group of Architects
      </div>
  </div>
  <div><img src="images/architect.png" alt="">
-<button class="primary-btn" id="experience-badge"><span id="experience-year">10+Years</span><br><span>Experience</span></button></div>
+<button class="primary-btn" id="experience-badge">
+    <span id="experience-year">10+Years</span>
+    <br>
+    <span>Experience</span></button>
+</div>
 </section>
 <section class="some-facts">
 <h3 class="feature-title">
